--- a/error.html
+++ b/error.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>sudarshanpowar.com/error</title>
+	<title>sudarshanpowar</title>
 </head>
 <body>
 <h1>Looks like, there's something error</h1>
